--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://tu-usuario.github.io/tu-repositorio",
+  "homepage": "https://Brayanex14.github.io/cafeteria-react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
